# hybrid-black-scholes-option-pricing-pinn

./: .gitignore  LICENSE  README.md  pyproject.toml  run_file.ipynb  test_run.ipynb
.tmp.driveupload/: 137828  137830  137832  137836  137840  137844  137848  137852  137856  137860  137864  137868  137874  137878  137882  137886  137890  137894  137898  137900  137904  137908  137910  137914  137918  137922  137926  137932  137936  137940  137944  137948  137952  137956  137960  137962  137966  137974  137978  137982  (+50 more)
app/: app.py
app/services/: grids.py  loaders.py  pricing.py
app/ui/: components.py  layout.py  plots.py  tabs.py  theme.py
configs/: data.yaml  eval.yaml  model.yaml  train.yaml
docs/: Geometric_Brownian_Motion.md
env/: requirements.txt
reports/compare/: compare_table.csv  summary.json
reports/compare/call/: compare_table.csv  summary.json
reports/compare/pinn_v4/: summary.json
reports/compare/put/: compare_table.csv  summary.json
scripts/: check_price.py  compare_pinn_bs_mc.py  run_mc_baseline.py
src/data/: gbm.py  make_mc_dataset.py  make_pinn_samples.py
src/evaluation/: greek.py
src/losses/: data_loss.py  physics_loss.py
src/models/: pricing_pinn.py
src/physics/: bs_closed_form.py  bs_pde_operator.py
src/training/: train.py
src/utils/: config.py
tests/: test_bs_closed_form.py  test_gbm_paths.py
